fixed navbar dropdown menu on smaller devices

--- a/portfolio.css
+++ b/portfolio.css
@@ -16,7 +16,7 @@
 body {
   color: var(--font-color);
   background: var(--primary-color);
-  min-width: 400px;
+  min-width: 300px;
 }
 .full-container {
   max-width: 900px;
